# event-sdk-rs

./: README.md
base-consumer/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
base-consumer/src/: lib.rs  main.rs
base-consumer/src/application/: consumer.rs  key_shared.rs  mod.rs  model.rs  run.rs  shared.rs
base-consumer/src/config/: mod.rs
base-consumer/src/infrastructure/: bootstrap.rs
base-publisher/: .env  Cargo.toml  README.md
base-publisher/src/: lib.rs  main.rs
base-publisher/src/application/: mod.rs  publisher.rs
base-publisher/src/config/: mod.rs
base-publisher/src/infrastructure/: bootstrap.rs
