[package]
name = "event_publisher"
version = "0.2.6"
edition = "2024"
authors = ["Juan José Caballero Rey <sudo.delete.evil@gmail.com>"]
description = "Agnostic event publisher for outbox pattern"
license = "GPL-3.0"
repository = "https://github.com/rey-sudo/emerald"
readme = "README.md"
keywords = ["pulsar", "sqlx", "events", "worker"]
categories = ["database", "asynchronous"]
exclude = [
 ".env*",
 "target/",
 "*.log"
]

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }

sqlx = { version = "0.8.6", features = [
    "runtime-tokio-native-tls",
    "postgres",
    "uuid",
    "chrono",
    "json",
] }


pulsar = { version = "6.7.2", default-features = false, features = ["tokio-runtime"] }


serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
uuid = { version = "1.23.0", features = ["serde"] }
chrono = { version = "0.4.44", features = ["serde"] }


tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "fmt"] }

anyhow = "1.0.102"
dotenvy = "0.15.7"
validator = { version = "0.20.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
